--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
