--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "husky": "^8.0.3",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "morgan": "^1.10.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
+    "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "eslint": "^8.43.0",
