--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
     "validator": "^13.9.0"
