--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
