--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -26,6 +27,8 @@
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
+    "normalize.css": "^8.0.1",
+    "react-router-dom": "^6.14.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
