--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
-    "react-router-dom": "^6.14.0"
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.0",
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
